# LEDs

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  record_gifs.py  run
apps/: .garvis_config.json  air_quality.py  caesar.py  chooser.py  circle.py  clock.py  garvis.py  gtrain.py  hello.py  plasma.py  rainbow.py  rangers.py  rotator.py  sports.py  tidbyt.py  valentine.py  weather.py
blog/: 2026-02-12-board-buttons-and-demo-chooser.md  2026-02-12-garvis-voice-client.md  2026-02-12-sports-tracker.md
board/: receiver.py
ledmatrix/: __init__.py  canvas.py  deploy.py  run.py  sender.py  simulator.py
server/: .env.example  garvis_server.py
