[project]
name = "ledmatrix"
version = "0.1.0"
description = "Development toolkit for 64x64 HUB75 LED matrix via Adafruit MatrixPortal S3"
requires-python = ">=3.10"
dependencies = [
    "pygame-ce>=2.5.0",
    "pyserial>=3.5",
    "nyct-gtfs>=0.0.4",
    "protobuf>=5",
    "pillow>=10.0.0",
    "sounddevice>=0.5.0",
    "websockets>=12.0",
    "numpy>=1.24.0",
]

[tool.setuptools]
packages = ["ledmatrix"]

[project.optional-dependencies]
dev = []
server = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
]
